<resources>
    <string name="app_name">eCPI</string>
    <string name="atmospheric_pressure_hpa">Atmospheric Pressure (hPa)</string>
    <string name="altitude_m">Altitude (m)</string>
    <string name="temperature_c">Temperature (°C)</string>
    <string name="display_values">Display Values</string>
    <string name="enter_pressure_altitude_ft">Enter Pressure Altitude (ft)</string>
    <string name="enter_temperature_c">Enter Temperature (°C)</string>
    <string name="density_altitude">Density Altitude:</string>
    <string name="max_power_available">Max Power Available:</string>
    <string name="enter_elevation_ft">Enter Elevation (ft)</string>
    <string name="enter_qnh_hpa">Enter QNH (hPa)</string>
    <string name="enter_weight_lbs">Enter Weight (lbs)</string>
    <string name="calculate">CALCULATE</string>
    <string name="elevation_ft">Elevation (ft)</string>
    <string name="qnh_hpa">QNH (hPa)</string>
    <string name="enter_qnh">Enter QNH</string>
    <string name="enter_elevation">Enter Elevation</string>
    <string name="enter_temperature">Enter Temperature</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="pressure_altitude">Pressure Altitude:</string>
    <string name="max_power">Max Power:</string>
    <string name="max_weight">Max Weight:</string>
    <string name="hover">Hover:</string>
    <string name="reset">RESET</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cheetah eCPI</string>
    <string name="nav_header_subtitle">Performance Calculator</string>
    <string name="nav_header_desc">App logo</string>
    <string name="clear">CLEAR</string>

</resources>