<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:gravity="center"
    android:background="#636B2F"
    >

    <EditText
        android:id="@+id/editTextQNH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_qnh_hpa"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"/>


    <EditText
        android:id="@+id/editTextElevation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_elevation_ft"
        android:inputType="numberDecimal"
        android:layout_below="@+id/editTextQNH"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"/>


    <EditText
        android:id="@+id/editTextTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_temperature_c"
        android:inputType="numberDecimal|numberSigned"
        android:layout_below="@id/editTextElevation"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"/>

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_weight_lbs"
        android:inputType="numberDecimal|numberSigned"
        android:layout_below="@id/editTextTemperature"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"/>



    <TextView
        android:id="@+id/textViewPressureAltitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonCalculate"
        android:layout_marginTop="42dp"
        android:textSize="24sp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/textViewDensityAltitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewPressureAltitude"
        android:textSize="24sp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/textViewMaxPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewDensityAltitude"
        android:textSize="24sp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/textViewMaxWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewMaxPower"
        android:textSize="24sp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/textViewHover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewMaxWeight"
        android:textSize="24sp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_below="@id/editTextWeight"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:textSize="18sp"
        android:background="@color/purple_500"
        android:textColor="@android:color/white"
        />

</RelativeLayout>
